[package]
name = "gitwho"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gitwho"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
