[package]
name = "portwatch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pw"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
crossterm = "0.28"
ratatui = "0.29"
sysinfo = "0.30"
nix = { version = "0.29", features = ["signal"] }
